--- a/opdracht2/index.html
+++ b/opdracht2/index.html
@@ -1,8 +1,43 @@
 <html>
-  <head>
-    <title>Frontend voor Designer - Opdracht 2</title>
-  </head>
 
-  <body>
-  </body>
+<head>
+  <title>Frontend voor Designer - Opdracht 2</title>
+<link rel="stylesheet" type="text/css" href="css/glider.css">
+ <link rel="stylesheet" type="text/css" href="css/style.css">
+  
+				
+</head>
+
+<body>
+
+<div class="glider-contain">
+  <div class="glider">
+    <div><img src="img/ethan-robertson-SYx3UCHZJlo-unsplash.jpg" alt=""></div>
+    <div><img src="img/kelly-russo-07lWC8Xf8bY-unsplash.jpg" alt=""></div>
+    <div><img src="img/simon-matzinger-tpe8OBr_jNk-unsplash.jpg" alt=""></div>
+    <div><img src="img/simon-migaj-b2qszO9C7sw-unsplash.jpg" alt=""></div>
+    <div><img src="img/toa-heftiba-bvhEYmFU7ec-unsplash.jpg" alt=""></div>
+    <div><img src="img/stephen-leonardi-3MsXe_ZlcCA-unsplash.jpg" alt=""></div>
+    <div><img src="img/loly-galina-7sdrndTIVuw-unsplash.jpg" alt=""></div>
+    <div><img src="img/andre-a-xavier-PYrSoybQ08o-unsplash.jpg" alt=""></div>
+    <div><img src="img/lucas-suesco-ZScK63JjqU0-unsplash.jpg" alt=""></div>
+    <div><img src="img/zachary-tan-6j7rfpqOAm8-unsplash.jpg" alt=""></div>
+    
+  </div>
+  
+  
+  
+  <button role="button" aria-label="Previous" class="glider-prev"><img src="img/key_left.png" alt=""></button>
+  <button role="button" aria-label="Next" class="glider-next"><img src="img/key_right.png" alt=""></button>
+  <div role="tablist" class="dots"></div>
+</div>
+  
+    <div class="left_press"><img src="img/key_left_press.png" alt=""></div>
+ 
+  
+  
+  
+<script src="js/glider.js"></script>  
+<script src="js/script.js"></script>
+</body>				
 </html>
