--- a/opdracht3/index.html
+++ b/opdracht3/index.html
@@ -1,8 +1,51 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Frontend voor Designer - Opdracht 3</title>
-  </head>
 
-  <body>
-  </body>
+<head>
+  <meta charset="utf-8">
+
+  <title>films</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/glider.css">
+  <!--  <link rel="stylesheet" href="css/style.css">-->
+</head>
+
+<body>
+
+  <header>
+
+  </header>
+
+
+  <div class="glider-contain">
+    <div class="glider">
+      <div id='foto1'></div>
+      <div id='foto2'></div>
+      <div id='foto3'></div>
+      <div id='foto4'></div>
+      <div id='foto5'></div>
+      <div id='foto6'></div>
+
+
+
+
+
+    </div>
+  </div>
+
+
+  <div>
+    <button role="button" aria-label="Previous" class="glider-prev">
+      <img src="img/key_left.png" alt=""></button>
+    <button role="button" aria-label="Next" class="glider-next">
+      <img src="img/key_right.png" alt=""></button>
+    <div role="tablist" class="dots"></div>
+  </div>
+
+  <script src="js/glider.js"></script>
+  <script src="js/script.js"></script>
+
+</body>
+
 </html>
