--- a/opdracht3/index.html
+++ b/opdracht3/index.html
@@ -7,6 +7,7 @@
   <title>films</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <!--  <link rel="stylesheet" href="css/style.css">-->
 </head>
@@ -18,6 +19,9 @@
 
 <body>
 
+<section>
+  <img id='logo' src="img/800px-Amazon_Prime_Video_logo.svg.png" alt="logo">
+</section>
   <div class='column1'>
     
   </div>
