--- a/opdracht3/index.html
+++ b/opdracht3/index.html
@@ -14,17 +14,52 @@
 
 
 <header>
-
+<section>
+  <img id='logo' src="img/800px-Amazon_Prime_Video_logo.svg.png" alt="logo">
+</section>
 </header>
 
 <body>
 
-<section>
-  <img id='logo' src="img/800px-Amazon_Prime_Video_logo.svg.png" alt="logo">
-</section>
+<form action="" id="genre-keuze">
+  
+  <label >
+    Alles
+    <input type="radio" value="alles" name="genre" checked>
+  </label>
+  
+   <label >
+    Horror
+    <input type="radio" value="horror" name="genre">
+  </label>
+   
+    <label >
+    Actie
+    <input type="radio" value="action" name="genre">
+  </label>
+  
+  <label >
+    Drama
+    <input type="radio" value="drama" name="genre">
+  </label>
+  
+  <label >
+    Crime
+    <input type="radio" value="crime" name="genre">
+  </label>
+  
+
+  
+  
+  
+</form>
+ 
+
   <div class='column1'>
     
   </div>
+  
+
 
 
 
