--- a/opdracht3/index.html
+++ b/opdracht3/index.html
@@ -21,6 +21,11 @@
 
 <body>
 
+<div class='loading'>
+  <img src="img/loading2.gif" alt="">
+</div>
+
+<div class='remove'>
 <form action="" id="genre-keuze">
   
   <label >
@@ -53,13 +58,14 @@
   
   
 </form>
+</div>
  
-
+<div class='remove'>
   <div class='column1'>
     
   </div>
   
-
+</div>
 
 
 
